# KiwiEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  Runner.cpp  Runner.h  imgui.ini  main.cpp
Assets/levels/: bidon.json  test.json
Assets/models/: coin.fbx  mitsuba.fbx  reference.dae  schlag.dae
Assets/scenes/: test.json
Assets/shaders/: default_frag.glsl  default_vert.glsl  depth_geo.glsl  depth_vert.glsl  light_basic_frag.glsl  phong_frag.glsl  phong_map_frag.glsl  phong_map_vert.glsl  phong_vert.glsl  screen_frag.glsl  screen_vert.glsl  shaders.ini  skybox_vert.glsl
Assets/textures/: grid.tga
Core/: Config.h  CoreGraphics.h  Graphics.h  INIConfig.h  Initializable.h  Opengl.h  Utility.h  bsp.h  scope_decl.h  serialization.h
Core/Filesystem/: VirtualFilesystem.cpp  VirtualFilesystem.h
Editor/: AssetManagerWindow.cpp  AssetManagerWindow.h  Editor.cpp  Editor.h  EditorWindow.cpp  EditorWindow.h  GlobalInstance.h  LevelArchive.cpp  LevelArchive.h  LevelPropertyWindow.cpp  LevelPropertyWindow.h  Properties.h  ToolsWindow.cpp  ToolsWindow.h  WindowInterface.h
Engine/: App.cpp  App.h  CameraInterface.h  GlobalInstance.h  GraphicContextInterface.h  OpenglGraphicContext.cpp  OpenglGraphicContext.h
Engine/Assets/: Asset.cpp  Asset.h  Importer.cpp  Importer.h  Loader.cpp  Loader.h  Manager.cpp  Manager.h  Storage.h  Tools.h  ugly.h
Engine/Context/: OpenCL.cpp  OpenCL.h
Engine/Event/: Channel.h  CoreNotifier.cpp  CoreNotifier.h  Dispatcher.h  GLFWNotifier.cpp  GLFWNotifier.h  Listener.h  (+9 more)
config/: assets.json  config.ini  editor.json  editor.xml
(+62 files in other folders)
